Added bin file. Moved DB location to ~/.dognotgod.

--- a/config/thin.yml
+++ b/config/thin.yml
@@ -1,13 +1,11 @@
 ---
-pid: /Users/luis/Projects/dog/tmp/thin.pid 
-log: /Users/luis/Projects/dog/tmp/thin.log 
+pid: tmp/thin.pid 
+log: tmp/thin.log
+rackup: config.ru
 timeout: 10
 port: 4567
 max_conns: 32
-chdir: /Users/luis/Projects/dog
-rackup: /Users/luis/Projects/dog/config.ru
 max_persistent_conns: 128
 environment: production
-address: 127.0.0.1
-servers: 1
+address: 0.0.0.0
 daemonize: true
